--- a/src/components/Feedback/styles.module.css
+++ b/src/components/Feedback/styles.module.css
@@ -1,11 +1,20 @@
-.form {
+/* .form {
   text-align: center;
+} */
+
+.form {
+  display: flex;
+  row-gap: 44px;
+  column-gap: 30px;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .field {
   position: relative;
-  display: block;
-  margin-bottom: 36px;
+  flex-basis: 100%;
+  /* display: block; */
+  /* margin-bottom: 36px; */
   color: var(--neutral);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -82,10 +91,7 @@
 
 @media screen and (min-width: 768px) {
   .form {
-    display: flex;
-    row-gap: 44px;
-    column-gap: 30px;
-    flex-wrap: wrap;
+    justify-content: initial;
   }
 
   .field {
